--- a/index.html
+++ b/index.html
@@ -5,42 +5,48 @@
   <!-- BASIC -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="robots" content="index, follow" />
+  <meta name="robots" content="index,follow" />
   <meta name="author" content="Silk4me" />
+  <meta property="og:image" content="https://nastyadudk.github.io/silk4me/og-image.png" />
+  <meta name="twitter:image" content="https://nastyadudk.github.io/silk4me/og-image.png" />
   <meta name="google-site-verification" content="TCLnyHIswT1paA_50G2Qy-OIybRX-8s9iLzGLgKFkD8" />
 
   <!-- TITLE / DESCRIPTION -->
-  <title>Silk4me — Black Collection | Преміум шовк</title>
+  <title>Silk4me — Black Collection | Преміум шовк Mulberry 6A</title>
   <meta name="description"
-    content="Silk4me — преміальна колекція чорного шовку Mulberry 6A: наволочки, піжами та аксесуари. Натуральний шовк, розкіш і бездоганна якість." />
+    content="Silk4me — преміальна Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари. Розкішний сон, користь для шкіри та волосся." />
 
   <!-- CANONICAL -->
   <link rel="canonical" href="https://nastyadudk.github.io/silk4me/" />
 
-  <!-- FAVICON -->
+  <!-- THEME / APP ICONS -->
+  <meta name="theme-color" content="#1f4c41" />
   <link rel="icon" href="/silk4me/favicon.ico" type="image/x-icon" />
-
+  <link rel="apple-touch-icon" href="/silk4me/apple-touch-icon.png" />
+  <link rel="manifest" href="/silk4me/site.webmanifest" />
+  <meta name="theme-color" content="#1F4C41" />
   <!-- OPEN GRAPH -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Silk4me" />
-  <meta property="og:title" content="Silk4me — Black Collection" />
-  <meta property="og:description" content="Преміальна колекція чорного шовку Mulberry 6A від бренду Silk4me." />
+  <meta property="og:title" content="Silk4me — Black Collection | Преміум шовк Mulberry 6A" />
+  <meta property="og:description"
+    content="Преміальна колекція чорного шовку Mulberry 6A: наволочки, піжами та аксесуари." />
   <meta property="og:url" content="https://nastyadudk.github.io/silk4me/" />
-  <meta property="og:image" content="https://nastyadudk.github.io/silk4me/logo.png" />
+  <meta property="og:image" content="https://nastyadudk.github.io/silk4me/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
   <!-- TWITTER -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Silk4me — Black Collection | Преміум шовк" />
+  <meta name="twitter:title" content="Silk4me — Black Collection | Преміум шовк Mulberry 6A" />
   <meta name="twitter:description" content="Ексклюзивний чорний шовк Mulberry 6A від бренду Silk4me." />
-  <meta name="twitter:image" content="https://nastyadudk.github.io/silk4me/logo.png" />
+  <meta name="twitter:image" content="https://nastyadudk.github.io/silk4me/og-image.png" />
 
-  <!-- FONTS -->
+  <!-- FONTS (keep minimal) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500;600&display=swap"
     rel="stylesheet" />
 
   <!-- STRUCTURED DATA -->
@@ -53,8 +59,28 @@
         "@id": "https://nastyadudk.github.io/silk4me/#organization",
         "name": "Silk4me",
         "url": "https://nastyadudk.github.io/silk4me/",
-        "logo": "https://nastyadudk.github.io/silk4me/logo.png",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://nastyadudk.github.io/silk4me/og-image.png"
+        },
         "sameAs": ["https://www.instagram.com/silk4me"]
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://nastyadudk.github.io/silk4me/#website",
+        "url": "https://nastyadudk.github.io/silk4me/",
+        "name": "Silk4me — Black Collection",
+        "publisher": { "@id": "https://nastyadudk.github.io/silk4me/#organization" },
+        "inLanguage": "uk"
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://nastyadudk.github.io/silk4me/#webpage",
+        "url": "https://nastyadudk.github.io/silk4me/",
+        "name": "Silk4me — Black Collection | Преміум шовк Mulberry 6A",
+        "isPartOf": { "@id": "https://nastyadudk.github.io/silk4me/#website" },
+        "about": { "@id": "https://nastyadudk.github.io/silk4me/#product" },
+        "inLanguage": "uk"
       },
       {
         "@type": "Brand",
@@ -66,12 +92,19 @@
         "@id": "https://nastyadudk.github.io/silk4me/#product",
         "name": "Silk4me Black Collection",
         "brand": { "@id": "https://nastyadudk.github.io/silk4me/#brand" },
-        "description": "Преміальна колекція чорного шовку Mulberry 6A.",
-        "material": "Mulberry silk 6A",
+        "description": "Преміальна колекція чорного шовку Mulberry 6A: наволочки, піжами та аксесуари.",
+        "material": "Mulberry silk",
         "url": "https://nastyadudk.github.io/silk4me/",
+        "additionalProperty": [
+          { "@type": "PropertyValue", "name": "Silk grade", "value": "6A" },
+          { "@type": "PropertyValue", "name": "Momme", "value": "22" }
+        ],
         "offers": {
           "@type": "Offer",
-          "availability": "https://schema.org/InStock"
+          "url": "https://silk4.me/product-category/blck_collection/",
+          "priceCurrency": "UAH",
+          "availability": "https://schema.org/InStock",
+          "seller": { "@id": "https://nastyadudk.github.io/silk4me/#organization" }
         }
       }
     ]
@@ -139,16 +172,15 @@
 <body>
   <div id="root"></div>
 
-  <!-- APP -->
-  <script type="module" src="/src/main.tsx"></script>
+  <!-- APP (GitHub Pages needs base path) -->
+  <script type="module" src="/silk4me/src/main.tsx"></script>
 
   <!-- ElevenLabs ConvAI -->
   <elevenlabs-convai agent-id="agent_2101kfzp9g9deyd8462gp5q2dss9"></elevenlabs-convai>
-  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
+  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async></script>
+
   <!-- Mobile phone button -->
-  <button class="mobile-assistant" aria-label="Поговорити з консультантом">
-    📞
-  </button>
+  <button class="mobile-assistant" aria-label="Поговорити з консультантом">📞</button>
 
   <script>
     (function () {
@@ -172,35 +204,57 @@
         return el.shadowRoot;
       }
 
-      function findStartButton(shadow) {
+      function findStartCandidate(shadow) {
         const nodes = shadow.querySelectorAll("button,[role='button'],a");
         for (const el of nodes) {
-          const text = (el.textContent || "").toLowerCase();
-          if (text.includes("start") || text.includes("поговор")) {
-            return el;
-          }
+          const txt = (el.textContent || "").toLowerCase();
+          const aria = (el.getAttribute?.("aria-label") || "").toLowerCase();
+          const title = (el.getAttribute?.("title") || "").toLowerCase();
+
+          const looksLikeStart =
+            txt.includes("start a call") ||
+            txt.includes("start") ||
+            txt.includes("поговор") ||
+            aria.includes("start a call") ||
+            aria.includes("поговор") ||
+            title.includes("start a call") ||
+            title.includes("поговор");
+
+          if (looksLikeStart) return el;
         }
         return null;
       }
 
       async function openAndStartCall() {
         document.body.classList.add(OPEN_CLASS);
+
         const shadow = await getShadowRoot();
         if (!shadow) return;
 
-        for (let i = 0; i < 25; i++) {
-          const btn = findStartButton(shadow);
-          if (btn) {
-            btn.click();
-            return;
-          }
+        for (let i = 0; i < 30; i++) {
+          const btn = findStartCandidate(shadow);
+          if (btn) { btn.click(); return; }
           await sleep(200);
         }
       }
 
+      async function setupAutoCollapse() {
+        const shadow = await getShadowRoot();
+        if (!shadow) return;
+
+        const observer = new MutationObserver(() => {
+          // If conversation ended and UI shows "Start a call" again — collapse on mobile
+          if (isMobile() && findStartCandidate(shadow)) {
+            document.body.classList.remove(OPEN_CLASS);
+          }
+        });
+
+        observer.observe(shadow, { childList: true, subtree: true, characterData: true });
+      }
+
       document.addEventListener("DOMContentLoaded", () => {
-        const btn = document.querySelector(BTN_SELECTOR);
-        btn?.addEventListener("click", openAndStartCall);
+        document.querySelector(BTN_SELECTOR)?.addEventListener("click", openAndStartCall);
+        setupAutoCollapse();
       });
     })();
   </script>
