--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- TITLE / DESCRIPTION -->
   <title>Silk4me — Black Collection | Преміум шовк Mulberry 6A</title>
   <meta name="description"
-    content="Silk4me — преміальна Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари. Розкішний сон, користь для шкіри та волосся." />
+    content="Silk4me — преміальна Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари. Хороший сон, користь для шкіри та волосся." />
 
   <!-- CANONICAL -->
   <link rel="canonical" href="https://nastyadudk.github.io/silk4me/" />
