--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
   <meta name="author" content="Silk4me" />
   <meta name="google-site-verification" content="TCLnyHIswT1paA_50G2Qy-OIybRX-8s9iLzGLgKFkD8" />
 
-  <!-- TITLE / DESCRIPTION -->
-  <title>Silk4me — Black Collection | Преміум шовк Mulberry 6A</title>
+  <!-- TITLE / DESCRIPTION (без "розкіш", "преміальна", "ексклюзивна") -->
+  <title>Silk4me — Black Collection | Шовк Mulberry 6A</title>
   <meta name="description"
-    content="Silk4me — преміальна Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари. Хороший сон, користь для шкіри та волосся." />
+    content="Silk4me — Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари. Комфортний сон і користь для шкіри та волосся." />
 
   <!-- CANONICAL -->
   <link rel="canonical" href="https://nastyadudk.github.io/silk4me/" />
 
-  <!-- APP / THEME -->
+  <!-- THEME / APP ICONS -->
   <meta name="theme-color" content="#1f4c41" />
   <link rel="icon" href="/silk4me/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/silk4me/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/silk4me/favicon-16x16.png" />
   <link rel="apple-touch-icon" href="/silk4me/apple-touch-icon.png" />
   <link rel="manifest" href="/silk4me/site.webmanifest" />
 
   <!-- OPEN GRAPH -->
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Silk4me" />
-  <meta property="og:title" content="Silk4me — Black Collection | Преміум шовк Mulberry 6A" />
+  <meta property="og:locale" content="uk_UA" />
+  <meta property="og:title" content="Silk4me — Black Collection | Шовк Mulberry 6A" />
   <meta property="og:description"
-    content="Преміальна колекція чорного шовку Mulberry 6A: наволочки, піжами та аксесуари." />
+    content="Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари." />
   <meta property="og:url" content="https://nastyadudk.github.io/silk4me/" />
   <meta property="og:image" content="https://nastyadudk.github.io/silk4me/og-image.png" />
   <meta property="og:image:width" content="1200" />
@@ -38,84 +41,82 @@
 
   <!-- TWITTER -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Silk4me — Black Collection | Преміум шовк Mulberry 6A" />
-  <meta name="twitter:description" content="Ексклюзивний чорний шовк Mulberry 6A від бренду Silk4me." />
+  <meta name="twitter:title" content="Silk4me — Black Collection | Шовк Mulberry 6A" />
+  <meta name="twitter:description"
+    content="Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари." />
   <meta name="twitter:image" content="https://nastyadudk.github.io/silk4me/og-image.png" />
   <meta name="twitter:image:alt" content="Silk4me — Black Collection — Mulberry Silk 6A" />
 
-  <!-- FONTS (minimal) -->
+  <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500;600&display=swap"
     rel="stylesheet" />
 
-  <!-- STRUCTURED DATA (JSON-LD) -->
+  <!-- STRUCTURED DATA (JSON-LD) — тоже без "преміальна/розкіш/ексклюзив" -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@graph": [
       {
-        "@type": "Organization",
-        "@id": "https://nastyadudk.github.io/silk4me/#organization",
-        "name": "Silk4me",
-        "url": "https://nastyadudk.github.io/silk4me/",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://nastyadudk.github.io/silk4me/apple-touch-icon.png"
-        },
-        "sameAs": [
-          "https://www.instagram.com/silk4me"
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Organization",
+            "@id": "https://nastyadudk.github.io/silk4me/#organization",
+            "name": "Silk4me",
+            "url": "https://nastyadudk.github.io/silk4me/",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://nastyadudk.github.io/silk4me/apple-touch-icon.png"
+            },
+            "sameAs": ["https://www.instagram.com/silk4me"]
+          },
+          {
+            "@type": "WebSite",
+            "@id": "https://nastyadudk.github.io/silk4me/#website",
+            "url": "https://nastyadudk.github.io/silk4me/",
+            "name": "Silk4me — Black Collection",
+            "publisher": { "@id": "https://nastyadudk.github.io/silk4me/#organization" },
+            "inLanguage": "uk"
+          },
+          {
+            "@type": "WebPage",
+            "@id": "https://nastyadudk.github.io/silk4me/#webpage",
+            "url": "https://nastyadudk.github.io/silk4me/",
+            "name": "Silk4me — Black Collection | Шовк Mulberry 6A",
+            "isPartOf": { "@id": "https://nastyadudk.github.io/silk4me/#website" },
+            "about": { "@id": "https://nastyadudk.github.io/silk4me/#product" },
+            "inLanguage": "uk"
+          },
+          {
+            "@type": "Brand",
+            "@id": "https://nastyadudk.github.io/silk4me/#brand",
+            "name": "Silk4me"
+          },
+          {
+            "@type": "Product",
+            "@id": "https://nastyadudk.github.io/silk4me/#product",
+            "name": "Silk4me Black Collection",
+            "brand": { "@id": "https://nastyadudk.github.io/silk4me/#brand" },
+            "description": "Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари.",
+            "material": "Mulberry silk",
+            "url": "https://nastyadudk.github.io/silk4me/",
+            "additionalProperty": [
+              { "@type": "PropertyValue", "name": "Silk grade", "value": "6A" },
+              { "@type": "PropertyValue", "name": "Momme", "value": "22" }
+            ],
+            "offers": {
+              "@type": "Offer",
+              "url": "https://silk4.me/product-category/blck_collection/",
+              "priceCurrency": "UAH",
+              "availability": "https://schema.org/InStock",
+              "seller": { "@id": "https://nastyadudk.github.io/silk4me/#organization" }
+            }
+          }
         ]
-      },
-      {
-        "@type": "WebSite",
-        "@id": "https://nastyadudk.github.io/silk4me/#website",
-        "url": "https://nastyadudk.github.io/silk4me/",
-        "name": "Silk4me — Black Collection",
-        "publisher": { "@id": "https://nastyadudk.github.io/silk4me/#organization" },
-        "inLanguage": "uk"
-      },
-      {
-        "@type": "WebPage",
-        "@id": "https://nastyadudk.github.io/silk4me/#webpage",
-        "url": "https://nastyadudk.github.io/silk4me/",
-        "name": "Silk4me — Black Collection | Преміум шовк Mulberry 6A",
-        "isPartOf": { "@id": "https://nastyadudk.github.io/silk4me/#website" },
-        "about": { "@id": "https://nastyadudk.github.io/silk4me/#product" },
-        "inLanguage": "uk"
-      },
-      {
-        "@type": "Brand",
-        "@id": "https://nastyadudk.github.io/silk4me/#brand",
-        "name": "Silk4me"
-      },
-      {
-        "@type": "Product",
-        "@id": "https://nastyadudk.github.io/silk4me/#product",
-        "name": "Silk4me Black Collection",
-        "brand": { "@id": "https://nastyadudk.github.io/silk4me/#brand" },
-        "description": "Преміальна колекція чорного шовку Mulberry 6A: наволочки, піжами та аксесуари.",
-        "material": "Mulberry silk",
-        "url": "https://nastyadudk.github.io/silk4me/",
-        "additionalProperty": [
-          { "@type": "PropertyValue", "name": "Silk grade", "value": "6A" },
-          { "@type": "PropertyValue", "name": "Momme", "value": "22" }
-        ],
-        "offers": {
-          "@type": "Offer",
-          "url": "https://silk4.me/product-category/blck_collection/",
-          "priceCurrency": "UAH",
-          "availability": "https://schema.org/InStock",
-          "seller": { "@id": "https://nastyadudk.github.io/silk4me/#organization" }
-        }
       }
-    ]
-  }
-  </script>
+    </script>
 
   <style>
-    /* Mobile phone button */
     .mobile-assistant {
       position: fixed;
       right: 16px;
@@ -175,10 +176,7 @@
 <body>
   <div id="root"></div>
 
-  <!-- APP
-    ВАЖНО: на проде (build) у Vite обычно генерируется /assets/*.js
-    Оставь этот путь таким, как в твоём dist/index.html после build.
-    Ниже пример для build: -->
+  <!-- Vite build output (в dist) -->
   <script type="module" src="./assets/index.js"></script>
 
   <!-- ElevenLabs ConvAI -->
@@ -239,7 +237,10 @@
 
         for (let i = 0; i < 30; i++) {
           const btn = findStartCandidate(shadow);
-          if (btn) { btn.click(); return; }
+          if (btn) {
+            btn.click();
+            return;
+          }
           await sleep(200);
         }
       }
@@ -249,7 +250,6 @@
         if (!shadow) return;
 
         const observer = new MutationObserver(() => {
-          // If UI shows "Start" state again — collapse on mobile
           if (isMobile() && findStartCandidate(shadow)) {
             document.body.classList.remove(OPEN_CLASS);
           }
