--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Silk4me" />
   <meta name="google-site-verification" content="TCLnyHIswT1paA_50G2Qy-OIybRX-8s9iLzGLgKFkD8" />
 
-  <!-- TITLE / DESCRIPTION (без "розкіш", "преміальна", "ексклюзивна") -->
+  <!-- TITLE / DESCRIPTION (без, "преміальна", "ексклюзивна") -->
   <title>Silk4me — Black Collection | Шовк Mulberry 6A</title>
   <meta name="description"
     content="Silk4me — Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари. Комфортний сон і користь для шкіри та волосся." />
@@ -54,7 +54,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500;600&display=swap"
     rel="stylesheet" />
 
-  <!-- STRUCTURED DATA (JSON-LD) — тоже без "преміальна/розкіш/ексклюзив" -->
+  <!-- STRUCTURED DATA (JSON-LD) — тоже без "преміальна/ексклюзив" -->
   <script type="application/ld+json">
       {
         "@context": "https://schema.org",
