--- a/index.html
+++ b/index.html
@@ -56,39 +56,39 @@
 
   <!-- STRUCTURED DATA -->
   <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@graph": [
-          {
-            "@type": "Organization",
-            "@id": "https://nastyadudk.github.io/silk4me/#organization",
-            "name": "Silk4me",
-            "url": "https://nastyadudk.github.io/silk4me/",
-            "logo": {
-              "@type": "ImageObject",
-              "url": "https://nastyadudk.github.io/silk4me/apple-touch-icon.png"
-            },
-            "sameAs": ["https://www.instagram.com/silk4me"]
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Organization",
+          "@id": "https://nastyadudk.github.io/silk4me/#organization",
+          "name": "Silk4me",
+          "url": "https://nastyadudk.github.io/silk4me/",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://nastyadudk.github.io/silk4me/apple-touch-icon.png"
           },
-          {
-            "@type": "WebSite",
-            "@id": "https://nastyadudk.github.io/silk4me/#website",
-            "url": "https://nastyadudk.github.io/silk4me/",
-            "name": "Silk4me — Black Collection",
-            "publisher": { "@id": "https://nastyadudk.github.io/silk4me/#organization" },
-            "inLanguage": "uk"
-          },
-          {
-            "@type": "WebPage",
-            "@id": "https://nastyadudk.github.io/silk4me/#webpage",
-            "url": "https://nastyadudk.github.io/silk4me/",
-            "name": "Silk4me — Black Collection | Шовк Mulberry 6A",
-            "isPartOf": { "@id": "https://nastyadudk.github.io/silk4me/#website" },
-            "inLanguage": "uk"
-          }
-        ]
-      }
-    </script>
+          "sameAs": ["https://www.instagram.com/silk4me"]
+        },
+        {
+          "@type": "WebSite",
+          "@id": "https://nastyadudk.github.io/silk4me/#website",
+          "url": "https://nastyadudk.github.io/silk4me/",
+          "name": "Silk4me — Black Collection",
+          "publisher": { "@id": "https://nastyadudk.github.io/silk4me/#organization" },
+          "inLanguage": "uk"
+        },
+        {
+          "@type": "WebPage",
+          "@id": "https://nastyadudk.github.io/silk4me/#webpage",
+          "url": "https://nastyadudk.github.io/silk4me/",
+          "name": "Silk4me — Black Collection | Шовк Mulberry 6A",
+          "isPartOf": { "@id": "https://nastyadudk.github.io/silk4me/#website" },
+          "inLanguage": "uk"
+        }
+      ]
+    }
+  </script>
 
   <style>
     .mobile-assistant {
@@ -151,7 +151,7 @@
   <div id="root"></div>
 
   <!-- Vite entry (ВАЖНО: именно так в корне) -->
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/silk4me/src/main.tsx"></script>
 
   <!-- ElevenLabs ConvAI -->
   <elevenlabs-convai agent-id="agent_2101kfzp9g9deyd8462gp5q2dss9"></elevenlabs-convai>
