--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div id="root"></div>
 
   <!-- Vite entry (ВАЖНО: именно так в корне) -->
-  <script type="module" src="/silk4me/src/main.tsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
 
   <!-- ElevenLabs ConvAI -->
   <elevenlabs-convai agent-id="agent_2101kfzp9g9deyd8462gp5q2dss9"></elevenlabs-convai>
