--- a/index.html
+++ b/index.html
@@ -8,44 +8,18 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="robots" content="index,follow" />
   <meta name="author" content="Silk4me" />
-  <meta name="google-site-verification" content="TCLnyHIswT1paA_50G2Qy-OIybRX-8s9iLzGLgKFkD8" />
 
-  <!-- TITLE / DESCRIPTION -->
+  <!-- TITLE -->
   <title>Silk4me — Black Collection | Шовк Mulberry 6A</title>
   <meta name="description"
-    content="Silk4me — Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари. Комфортний сон і користь для шкіри та волосся." />
+    content="Silk4me — Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари." />
 
   <!-- CANONICAL -->
   <link rel="canonical" href="https://nastyadudk.github.io/silk4me/" />
 
-  <!-- THEME / ICONS / MANIFEST -->
+  <!-- ICONS -->
+  <link rel="icon" href="/silk4me/favicon.ico" />
   <meta name="theme-color" content="#1f4c41" />
-  <link rel="icon" href="/silk4me/favicon.ico" sizes="any" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/silk4me/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/silk4me/favicon-16x16.png" />
-  <link rel="apple-touch-icon" href="/silk4me/apple-touch-icon.png" />
-  <link rel="manifest" href="/silk4me/site.webmanifest" />
-
-  <!-- OPEN GRAPH -->
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Silk4me" />
-  <meta property="og:locale" content="uk_UA" />
-  <meta property="og:title" content="Silk4me — Black Collection | Шовк Mulberry 6A" />
-  <meta property="og:description"
-    content="Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари." />
-  <meta property="og:url" content="https://nastyadudk.github.io/silk4me/" />
-  <meta property="og:image" content="https://nastyadudk.github.io/silk4me/og-image.png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Silk4me — Black Collection — Mulberry Silk 6A" />
-
-  <!-- TWITTER -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Silk4me — Black Collection | Шовк Mulberry 6A" />
-  <meta name="twitter:description"
-    content="Black Collection із натурального шовку Mulberry 6A: наволочки, піжами та аксесуари." />
-  <meta name="twitter:image" content="https://nastyadudk.github.io/silk4me/og-image.png" />
-  <meta name="twitter:image:alt" content="Silk4me — Black Collection — Mulberry Silk 6A" />
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -54,47 +28,15 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500;600&display=swap"
     rel="stylesheet" />
 
-  <!-- STRUCTURED DATA -->
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@graph": [
-        {
-          "@type": "Organization",
-          "@id": "https://nastyadudk.github.io/silk4me/#organization",
-          "name": "Silk4me",
-          "url": "https://nastyadudk.github.io/silk4me/",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://nastyadudk.github.io/silk4me/apple-touch-icon.png"
-          },
-          "sameAs": ["https://www.instagram.com/silk4me"]
-        },
-        {
-          "@type": "WebSite",
-          "@id": "https://nastyadudk.github.io/silk4me/#website",
-          "url": "https://nastyadudk.github.io/silk4me/",
-          "name": "Silk4me — Black Collection",
-          "publisher": { "@id": "https://nastyadudk.github.io/silk4me/#organization" },
-          "inLanguage": "uk"
-        },
-        {
-          "@type": "WebPage",
-          "@id": "https://nastyadudk.github.io/silk4me/#webpage",
-          "url": "https://nastyadudk.github.io/silk4me/",
-          "name": "Silk4me — Black Collection | Шовк Mulberry 6A",
-          "isPartOf": { "@id": "https://nastyadudk.github.io/silk4me/#website" },
-          "inLanguage": "uk"
-        }
-      ]
-    }
-  </script>
-
+  <!-- STYLES -->
   <style>
+    /* =========================
+       MOBILE ASSISTANT BUTTON
+    ========================= */
     .mobile-assistant {
       position: fixed;
       right: 16px;
-      bottom: 16px;
+      bottom: 24px;
       width: 56px;
       height: 56px;
       border-radius: 9999px;
@@ -107,13 +49,15 @@
       z-index: 999999;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
       cursor: pointer;
-      -webkit-tap-highlight-color: transparent;
     }
 
     .mobile-assistant:active {
       transform: translateY(1px);
     }
 
+    /* =========================
+       ELEVENLABS WIDGET
+    ========================= */
     elevenlabs-convai {
       cursor: default;
     }
@@ -125,13 +69,14 @@
 
       elevenlabs-convai {
         position: fixed;
-        right: 12px;
-        bottom: 86px;
+        right: 16px;
+        bottom: 120px;
+        /* ⬅️ ВАЖНО: выше соц-иконок */
         z-index: 999998;
         opacity: 0;
         pointer-events: none;
         transform: translateY(8px);
-        transition: opacity 0.2s ease, transform 0.2s ease;
+        transition: opacity 0.25s ease, transform 0.25s ease;
       }
 
       body.convai-open elevenlabs-convai {
@@ -148,69 +93,67 @@
 </head>
 
 <body>
+  <!-- React root -->
   <div id="root"></div>
 
-  <!-- Vite entry (ВАЖНО: именно так в корне) -->
+  <!-- Vite entry -->
   <script type="module" src="/src/main.tsx"></script>
 
-  <!-- ElevenLabs ConvAI -->
+  <!-- =========================
+       ELEVENLABS CONVAI
+  ========================= -->
   <elevenlabs-convai agent-id="agent_2101kfzp9g9deyd8462gp5q2dss9"></elevenlabs-convai>
   <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async></script>
 
   <!-- Mobile phone button -->
-  <button class="mobile-assistant" aria-label="Поговорити з консультантом">📞</button>
+  <button class="mobile-assistant" aria-label="Поговорити з консультантом">
+    📞
+  </button>
 
+  <!-- =========================
+       CONTROL SCRIPT
+  ========================= -->
   <script>
     (function () {
       const OPEN_CLASS = "convai-open";
-      const WIDGET_SELECTOR = "elevenlabs-convai";
-      const BTN_SELECTOR = ".mobile-assistant";
+      const BTN = document.querySelector(".mobile-assistant");
+      const WIDGET = document.querySelector("elevenlabs-convai");
 
       const sleep = (ms) => new Promise((r) => setTimeout(r, ms));
-      const isMobile = () =>
-        window.matchMedia && window.matchMedia("(max-width: 640px)").matches;
 
       async function getShadowRoot() {
-        const el = document.querySelector(WIDGET_SELECTOR);
-        if (!el) return null;
-
+        if (!WIDGET) return null;
         const start = Date.now();
-        while (!el.shadowRoot) {
-          if (Date.now() - start > 15000) return null;
+        while (!WIDGET.shadowRoot) {
+          if (Date.now() - start > 10000) return null;
           await sleep(150);
         }
-        return el.shadowRoot;
+        return WIDGET.shadowRoot;
       }
 
-      function findStartCandidate(shadow) {
-        const nodes = shadow.querySelectorAll("button,[role='button'],a");
-        for (const el of nodes) {
-          const txt = (el.textContent || "").toLowerCase();
-          const aria = (el.getAttribute?.("aria-label") || "").toLowerCase();
-          const title = (el.getAttribute?.("title") || "").toLowerCase();
-
-          const looksLikeStart =
-            txt.includes("start a call") ||
-            txt.includes("start") ||
-            txt.includes("поговор") ||
-            aria.includes("start a call") ||
-            aria.includes("поговор") ||
-            title.includes("start a call") ||
-            title.includes("поговор");
-
-          if (looksLikeStart) return el;
+      function findStartButton(shadow) {
+        const buttons = shadow.querySelectorAll("button,[role='button'],a");
+        for (const el of buttons) {
+          const text = (el.textContent || "").toLowerCase();
+          if (
+            text.includes("start") ||
+            text.includes("call") ||
+            text.includes("поговор")
+          ) {
+            return el;
+          }
         }
         return null;
       }
 
-      async function openAndStartCall() {
+      async function openAssistant() {
         document.body.classList.add(OPEN_CLASS);
 
         const shadow = await getShadowRoot();
         if (!shadow) return;
 
-        for (let i = 0; i < 30; i++) {
-          const btn = findStartCandidate(shadow);
+        for (let i = 0; i < 20; i++) {
+          const btn = findStartButton(shadow);
           if (btn) {
             btn.click();
             return;
@@ -219,23 +162,7 @@
         }
       }
 
-      async function setupAutoCollapse() {
-        const shadow = await getShadowRoot();
-        if (!shadow) return;
-
-        const observer = new MutationObserver(() => {
-          if (isMobile() && findStartCandidate(shadow)) {
-            document.body.classList.remove(OPEN_CLASS);
-          }
-        });
-
-        observer.observe(shadow, { childList: true, subtree: true, characterData: true });
-      }
-
-      document.addEventListener("DOMContentLoaded", () => {
-        document.querySelector(BTN_SELECTOR)?.addEventListener("click", openAndStartCall);
-        setupAutoCollapse();
-      });
+      BTN?.addEventListener("click", openAssistant);
     })();
   </script>
 </body>
