--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="uk">
 
 <head>
-  <!-- BASIC -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -24,54 +23,56 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Playfair+Display:wght@400;500;600&display=swap"
     rel="stylesheet" />
 
-  <!-- STYLES FOR VOICE ASSISTANT -->
+  <!-- =========================
+       VOICE ASSISTANT STYLES
+  ========================== -->
   <style>
-    /* ===== Floating phone button ===== */
-    .mobile-assistant {
-      position: fixed;
-      right: 20px;
-      bottom: 120px;
-      /* ⬅️ НЕ ВНИЗУ */
-      width: 56px;
-      height: 56px;
-      border-radius: 9999px;
-      background: #1f4c41;
-      color: #fff;
-      border: none;
-      font-size: 22px;
-      display: grid;
-      place-items: center;
-      z-index: 100000;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, .25);
-      cursor: pointer;
-    }
-
-    .mobile-assistant:active {
-      transform: translateY(1px);
-    }
-
-    /* ===== ElevenLabs widget positioning ===== */
+    /* ❌ по умолчанию СКРЫТО (десктоп / Mac) */
+    .mobile-assistant,
     elevenlabs-convai {
-      position: fixed;
-      right: 20px;
-      bottom: 190px;
-      /* ⬅️ выше кнопки */
-      max-height: calc(100vh - 360px);
-      /* ⬅️ НИЖЕ КАРТИНКИ НЕ ОПУСТИТСЯ */
-      z-index: 99999;
+      display: none;
     }
 
-    /* ===== Mobile tweaks ===== */
+    /* =========================
+       MOBILE ONLY
+    ========================== */
     @media (max-width: 640px) {
-      elevenlabs-convai {
-        right: 12px;
-        bottom: 180px;
-        max-height: calc(100vh - 300px);
+
+      /* 📞 КНОПКА */
+      .mobile-assistant {
+        display: grid;
+        position: fixed;
+        right: 14px;
+        bottom: 140px;
+        /* ⬅️ ОПУЩЕНА НИЖЕ, КАК НА ФОТО */
+        width: 56px;
+        height: 56px;
+        border-radius: 9999px;
+        background: #1f4c41;
+        color: #fff;
+        border: none;
+        font-size: 22px;
+        place-items: center;
+        z-index: 100000;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+        cursor: pointer;
+        -webkit-tap-highlight-color: transparent;
       }
 
-      .mobile-assistant {
-        right: 12px;
-        bottom: 110px;
+      .mobile-assistant:active {
+        transform: translateY(1px);
+      }
+
+      /* 🤖 ВИДЖЕТ */
+      elevenlabs-convai {
+        display: block;
+        position: fixed;
+        right: 14px;
+        bottom: 200px;
+        /* ⬅️ ВЫШЕ КНОПКИ */
+        max-height: calc(100vh - 420px);
+        /* ⛔️ НИЖЕ КАРТИНКИ НЕ ПАДАЕТ */
+        z-index: 99999;
       }
     }
   </style>
@@ -80,47 +81,55 @@
 <body>
   <div id="root"></div>
 
-  <!-- Vite entry -->
+  <!-- Vite -->
   <script type="module" src="/src/main.tsx"></script>
 
-  <!-- ElevenLabs Voice Assistant -->
-  <elevenlabs-convai agent-id="agent_2101kfzp9g9deyd8462gp5q2dss9"></elevenlabs-convai>
-  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async></script>
+  <!-- =========================
+       ELEVENLABS
+  ========================== -->
+  <elevenlabs-convai agent-id="agent_2101kfzp9g9deyd8462gp5q2dss9">
+  </elevenlabs-convai>
 
-  <!-- Phone button -->
+  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async>
+  </script>
+
+  <!-- 📞 MOBILE BUTTON -->
   <button class="mobile-assistant" aria-label="Поговорити з консультантом">
     📞
   </button>
 
-  <!-- JS logic -->
+  <!-- =========================
+       LOGIC
+  ========================== -->
   <script>
     (function () {
+      if (window.matchMedia("(min-width: 641px)").matches) return;
+
       const btn = document.querySelector(".mobile-assistant");
       const widget = document.querySelector("elevenlabs-convai");
-
       if (!btn || !widget) return;
 
-      btn.addEventListener("click", async () => {
-        // пробуем нажать кнопку старта внутри виджета
-        const startCall = async () => {
-          const root = widget.shadowRoot;
-          if (!root) return false;
+      const sleep = (ms) => new Promise((r) => setTimeout(r, ms));
 
-          const buttons = root.querySelectorAll("button, [role='button']");
-          for (const b of buttons) {
-            const text = (b.textContent || "").toLowerCase();
-            if (text.includes("start") || text.includes("поговор")) {
-              b.click();
-              return true;
-            }
+      async function tryStartCall() {
+        const root = widget.shadowRoot;
+        if (!root) return false;
+
+        const buttons = root.querySelectorAll("button,[role='button']");
+        for (const b of buttons) {
+          const t = (b.textContent || "").toLowerCase();
+          if (t.includes("start") || t.includes("поговор")) {
+            b.click();
+            return true;
           }
-          return false;
-        };
+        }
+        return false;
+      }
 
-        // ждём загрузку shadowRoot
+      btn.addEventListener("click", async () => {
         for (let i = 0; i < 20; i++) {
-          if (await startCall()) break;
-          await new Promise(r => setTimeout(r, 300));
+          if (await tryStartCall()) break;
+          await sleep(300);
         }
       });
     })();
