--- a/index.html
+++ b/index.html
@@ -27,9 +27,22 @@
        VOICE ASSISTANT STYLES
   ========================== -->
   <style>
-    /* ❌ по умолчанию СКРЫТО (десктоп / Mac) */
-    .mobile-assistant,
+    /* =========================
+       DESKTOP — ассистент ВИДЕН
+    ========================== */
     elevenlabs-convai {
+      position: fixed;
+      right: 24px;
+      bottom: 180px;
+      /* ⬅️ ниже картинки, не в самом низу */
+      max-height: 420px;
+      z-index: 99999;
+    }
+
+    /* =========================
+       PHONE BUTTON — HIDDEN BY DEFAULT
+    ========================== */
+    .mobile-assistant {
       display: none;
     }
 
@@ -38,13 +51,17 @@
     ========================== */
     @media (max-width: 640px) {
 
-      /* 📞 КНОПКА */
+      /* ассистент скрыт */
+      elevenlabs-convai {
+        display: none;
+      }
+
+      /* 📞 кнопка */
       .mobile-assistant {
         display: grid;
         position: fixed;
         right: 14px;
         bottom: 140px;
-        /* ⬅️ ОПУЩЕНА НИЖЕ, КАК НА ФОТО */
         width: 56px;
         height: 56px;
         border-radius: 9999px;
@@ -62,18 +79,6 @@
       .mobile-assistant:active {
         transform: translateY(1px);
       }
-
-      /* 🤖 ВИДЖЕТ */
-      elevenlabs-convai {
-        display: block;
-        position: fixed;
-        right: 14px;
-        bottom: 200px;
-        /* ⬅️ ВЫШЕ КНОПКИ */
-        max-height: calc(100vh - 420px);
-        /* ⛔️ НИЖЕ КАРТИНКИ НЕ ПАДАЕТ */
-        z-index: 99999;
-      }
     }
   </style>
 </head>
@@ -85,13 +90,11 @@
   <script type="module" src="/src/main.tsx"></script>
 
   <!-- =========================
-       ELEVENLABS
+       ELEVENLABS ASSISTANT
   ========================== -->
   <elevenlabs-convai agent-id="agent_2101kfzp9g9deyd8462gp5q2dss9">
   </elevenlabs-convai>
-
-  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async>
-  </script>
+  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async></script>
 
   <!-- 📞 MOBILE BUTTON -->
   <button class="mobile-assistant" aria-label="Поговорити з консультантом">
@@ -99,7 +102,7 @@
   </button>
 
   <!-- =========================
-       LOGIC
+       MOBILE LOGIC
   ========================== -->
   <script>
     (function () {
