--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta https-equiv="x-ua-compatible" content="ie=edge" />
 
   <title>Silk4me — Black Collection</title>
   <meta name="description"
